--- a/app/src/main/res/drawable/outline.xml
+++ b/app/src/main/res/drawable/outline.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <stroke android:color="#c2c2c2"
+<solid android:color="#b0c4de"></solid>
+    <stroke android:color="#0F0F0F"
         android:width="1dp"/>
 
     <corners android:radius="5dp"/>
