--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -12,4 +12,9 @@
     android:id="@+id/settings"
     android:title="Settings"
     app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/logOut"
+        android:title="Log Out"
+        app:showAsAction="never"/>
 </menu>
